deployment.yaml
apiVersion: v1
kind: Pod
metadata:
   name: web
spec:
   containers:
     - name: web
       image: pikachugh/pr4:latest
       ports:
        - containerPort: 8000
