pr4-ffff-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: pr4-ffff
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/pr4-ffff: "true"
  podSelector:
    matchLabels:
      io.kompose.network/pr4-ffff: "true"
